allow wildfire.paloaltonetworks.com

--- a/wildfire/wildfire.html
+++ b/wildfire/wildfire.html
@@ -4,7 +4,7 @@
         color: '#3A98D6',
         defaults: {
             name: { value : "", required: true },
-            server: { value : "", required: true },
+            server: { value : "" },
             apikey: { type: "password", required: true }
         },
         icon: "wildfire.png",
@@ -25,7 +25,7 @@
         <label for="node-config-input-server"><i class="fa fa-server"></i> Server</label>
         <input type="text" id="node-config-input-server" placeholder="192.168.1.12">
     </div>
-
+    
     <div class="form-row">
         <label for="node-config-input-apikey"><i class="fa fa-lock"></i>
         <span data-i18n="node-red:common.label.secret">Apikey</span></label>
@@ -35,5 +35,5 @@
 </script>
 
 <script type="text/x-red" data-help-name="wildfire service">
-    <p>Todo</p>
+    <p></p>
 </script>
